src/5.1/content/reference/Catel.MVVM/Catel/Windows/Interactivity/CommandEventTriggerBase.md


+++
title = "CommandEventTriggerBase" 
description = ""
weight = 20
generator = "SharpDox.Plugins.Hugo"
+++

Name|Value
---|---
Assembly|Catel.MVVM
Namespace|Catel.Windows.Interactivity
Available on|.NET Framework 4.5, .NET Framework 4.6

```
public abstract class CommandEventTriggerBase<T> : EventTriggerBase<T, T> where T : FrameworkElement 
```

**Base types**
[EventTriggerBase]({{< relref "reference/Catel.MVVM/Catel/Windows/Interactivity/EventTriggerBase.md" >}})

Trigger base class that handles a safe unsubscribe and clean up because the default Trigger class does not always call OnDetaching. This class extends the [Missing: <see cref="T:Catel.Windows.Interactivity.EventTriggerBase`1" />](#) class by adding supports for commands.

#### Type Parameters

**T**
The this behavior should attach to.

## Fields

### CommandParameterProperty

The property definition for the CommandParameter dependency property.

### CommandProperty

Using a DependencyProperty as the backing store for Command. This enables animation, styling, binding, etc...

### ModifiersProperty

Using a DependencyProperty as the backing store for Modifiers. This enables animation, styling, binding, etc...

## Properties

### Command

Gets or sets the command to execute when the key is pressed.

### CommandParameter

Gets or sets the command parameter, which will override the parameter defined in the direct command binding.

### Modifiers

Gets or sets the modifiers to check for.

## Methods

